// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Framework ESLint Integration > should lint Angular test file > angular-errors 1`] = `
[
  {
    "column": 2,
    "endColumn": 41,
    "endLine": 3,
    "line": 3,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "nodeType": null,
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 69,
    "endLine": 6,
    "line": 6,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "nodeType": null,
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 94,
    "endLine": 10,
    "line": 10,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "nodeType": null,
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 55,
    "endLine": 29,
    "fix": {
      "range": [
        1084,
        1084,
      ],
      "text": "
  <db-tooltip>Describe action</db-tooltip>",
    },
    "line": 19,
    "message": "DBButton with noText must have a DBTooltip child for accessibility",
    "messageId": "missingTooltip",
    "nodeType": null,
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 25,
    "endLine": 42,
    "line": 42,
    "message": "DBHeader must have burgerMenuLabel attribute for accessibility",
    "messageId": "missingBurgerMenuLabel",
    "nodeType": null,
    "ruleId": "db-ux/header-burger-menu-label-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 23,
    "endLine": 53,
    "line": 51,
    "message": "DBNavigationItem must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "nodeType": null,
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 23,
    "endLine": 64,
    "line": 62,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "nodeType": null,
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 40,
    "endLine": 76,
    "line": 76,
    "message": "DBTag with behavior="removable" must have removeButton attribute for accessibility",
    "messageId": "missingRemoveButton",
    "nodeType": null,
    "ruleId": "db-ux/tag-removable-remove-button-required",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint Angular test file > angular-fixed 1`] = `
"<div>
	<!-- db-ux/accordion-item-headline-required -->
	<db-accordion-item></db-accordion-item>

	<!-- db-ux/badge-corner-placement-rules -->
	<db-badge placement="corner-top-right" label="9999">9999</db-badge>

	<!-- db-ux/badge-no-inline-in-interactive -->
	<db-button type="button">
		<db-badge placement="corner-top-right" label="Inline in button">Inline in button</db-badge>
	</db-button>

	<!-- db-ux/close-button-text-required -->
	<db-notification></db-notification>
	<db-drawer></db-drawer>
	<db-custom-select [label]="'Select'"></db-custom-select>

	<!-- db-ux/button-no-text-requires-tooltip -->
	<db-button noText icon="search" type="button">
  <db-tooltip>Describe action</db-tooltip>
  <db-tooltip>Describe action</db-tooltip>
  <db-tooltip>Describe action</db-tooltip>
  <db-tooltip>Describe action</db-tooltip>
  <db-tooltip>Describe action</db-tooltip>
  <db-tooltip>Describe action</db-tooltip>
  <db-tooltip>Describe action</db-tooltip>
  <db-tooltip>Describe action</db-tooltip>
  <db-tooltip>Describe action</db-tooltip>
  <db-tooltip>Describe action</db-tooltip></db-button>

	<!-- db-ux/button-type-required -->
	<db-button type="button">Missing type</db-button>
	<db-button type="button">Valid button</db-button>

	<!-- db-ux/form-label-required -->
	<db-input type="text"></db-input>

	<!-- db-ux/form-validation-message-required -->
	<db-input [label]="'Email'" required type="text"></db-input>

	<!-- db-ux/header-burger-menu-label-required -->
	<db-header></db-header>

	<!-- db-ux/input-type-required -->
	<db-input [label]="'Test'" type="text"></db-input>

	<!-- db-ux/link-external-security -->
	<db-link href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer">External link</db-link>

	<!-- db-ux/navigation-item-back-button-text-required -->
	<db-navigation-item>
		<div slot="subNavigation">Sub nav</div>
	</db-navigation-item>

	<!-- db-ux/no-interactive-tooltip-content -->
	<db-tooltip>
		<db-button type="button">Click</db-button>
	</db-tooltip>

	<!-- db-ux/no-nested-accordion -->
	<db-accordion>
		<db-accordion-item>
			<db-accordion></db-accordion>
		</db-accordion-item>
	</db-accordion>

	<!-- db-ux/prefer-icon-attribute -->
	<db-button type="button">
		<db-icon icon="search"></db-icon>
	</db-button>

	<!-- db-ux/select-requires-options -->
	<db-select [label]="'Select'"></db-select>

	<!-- db-ux/tag-removable-remove-button-required -->
	<db-tag behavior="removable"></db-tag>

	<!-- db-ux/tooltip-requires-interactive-parent -->
	<div>
		<db-tooltip>Tooltip without interactive parent</db-tooltip>
	</div>
</div>
"
`;

exports[`Framework ESLint Integration > should lint React test file > react-errors 1`] = `
[
  {
    "column": 4,
    "endColumn": 21,
    "endLine": 23,
    "line": 23,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 21,
    "endLine": 23,
    "line": 23,
    "message": "DBAccordionItem must have either a text property or children content",
    "messageId": "missingContent",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 20,
    "endLine": 34,
    "line": 34,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 20,
    "endLine": 34,
    "line": 34,
    "message": "DBNotification must have either a text property or children content",
    "messageId": "missingContent",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 14,
    "endLine": 35,
    "line": 35,
    "message": "DBDrawer must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 35,
    "endLine": 36,
    "line": 36,
    "message": "DBCustomSelect must have mobileCloseButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 27,
    "endLine": 47,
    "line": 47,
    "message": "DBInput must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/form-label-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 50,
    "endLine": 50,
    "line": 50,
    "message": "DBInput with required will use default browser validation message. Consider adding invalidMessage attribute for better UX",
    "messageId": "missingInvalidMessage",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/form-validation-message-required",
    "severity": 1,
  },
  {
    "column": 4,
    "endColumn": 14,
    "endLine": 53,
    "line": 53,
    "message": "DBHeader must have burgerMenuLabel attribute for accessibility",
    "messageId": "missingBurgerMenuLabel",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/header-burger-menu-label-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 40,
    "endLine": 65,
    "line": 64,
    "message": "DBNavigationItem must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 40,
    "endLine": 65,
    "line": 64,
    "message": "DBNavigationItem must have either a text property or children content",
    "messageId": "missingContent",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 15,
    "endLine": 68,
    "line": 68,
    "message": "DBTooltip must not contain interactive elements. Use DBPopover for interactive content",
    "messageId": "noInteractive",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/no-interactive-tooltip-content",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 15,
    "endLine": 68,
    "line": 68,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 22,
    "endLine": 74,
    "line": 74,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 6,
    "endColumn": 19,
    "endLine": 75,
    "line": 75,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 42,
    "endLine": 80,
    "line": 80,
    "message": "DBButton must have either a text property or children content",
    "messageId": "missingContent",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 29,
    "endLine": 85,
    "line": 85,
    "message": "DBSelect must have either an options property or <option> children",
    "messageId": "missingOptions",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/select-requires-options",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 32,
    "endLine": 88,
    "line": 88,
    "message": "DBTag with behavior="removable" must have removeButton attribute for accessibility",
    "messageId": "missingRemoveButton",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/tag-removable-remove-button-required",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 16,
    "endLine": 92,
    "line": 92,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "nodeType": "JSXOpeningElement",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint React test file > react-fixed 1`] = `
"import {
	DBAccordion,
	DBAccordionItem,
	DBBadge,
	DBButton,
	DBCustomSelect,
	DBDrawer,
	DBHeader,
	DBIcon,
	DBInput,
	DBLink,
	DBNavigationItem,
	DBNotification,
	DBSelect,
	DBTag,
	DBTooltip
} from '@db-ux/react-core-components';

export const TestComponent = () => {
	return (
		<div>
			{/* db-ux/accordion-item-headline-required */}
			<DBAccordionItem></DBAccordionItem>

			{/* db-ux/badge-corner-placement-rules */}
			<DBBadge placement="corner-top-right" label="9999">999</DBBadge>

			{/* db-ux/badge-no-inline-in-interactive */}
			<DBButton type="submit">
				<DBBadge placement="corner-top-right" label="Inline in button">Inl</DBBadge>
			</DBButton>

			{/* db-ux/close-button-text-required */}
			<DBNotification></DBNotification>
			<DBDrawer></DBDrawer>
			<DBCustomSelect label="Select"></DBCustomSelect>

			{/* db-ux/button-no-text-requires-tooltip */}
			<DBButton type="submit" noText icon="search">
  <DBTooltip>Describe action</DBTooltip></DBButton>

			{/* db-ux/button-type-required */}
			<DBButton type="submit">Missing type</DBButton>
			<DBButton type="button">Valid button</DBButton>

			{/* db-ux/form-label-required */}
			<DBInput type="text" />

			{/* db-ux/form-validation-message-required */}
			<DBInput label="Email" required type="text" />

			{/* db-ux/header-burger-menu-label-required */}
			<DBHeader></DBHeader>

			{/* db-ux/input-type-required */}
			<DBInput label="Test" type="text" />

			{/* db-ux/link-external-security */}
			<DBLink href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer">
				External link
			</DBLink>

			{/* db-ux/navigation-item-back-button-text-required */}
			<DBNavigationItem
				subNavigation={<div>Sub nav</div>}></DBNavigationItem>

			{/* db-ux/no-interactive-tooltip-content */}
			<DBTooltip>
				<DBButton type="submit">Click</DBButton>
			</DBTooltip>

			{/* db-ux/no-nested-accordion */}
			<DBAccordion>
				<DBAccordionItem>
					<DBAccordion></DBAccordion>
				</DBAccordionItem>
			</DBAccordion>

			{/* db-ux/prefer-icon-attribute */}
			<DBButton type="submit" icon="search">
				
			</DBButton>

			{/* db-ux/select-requires-options */}
			<DBSelect label="Select"></DBSelect>

			{/* db-ux/tag-removable-remove-button-required */}
			<DBTag behavior="removable"></DBTag>

			{/* db-ux/tooltip-requires-interactive-parent */}
			<div>
				<DBTooltip>Tooltip without interactive parent</DBTooltip>
			</div>
		</div>
	);
};
"
`;

exports[`Framework ESLint Integration > should lint Vue test file > vue-errors 1`] = `
[
  {
    "column": 3,
    "endColumn": 38,
    "endLine": 4,
    "line": 4,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "nodeType": "VElement",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 38,
    "endLine": 4,
    "line": 4,
    "message": "DBAccordionItem must have either a text property or children content",
    "messageId": "missingContent",
    "nodeType": "VElement",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 55,
    "endLine": 7,
    "line": 7,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "nodeType": "VElement",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 55,
    "endLine": 7,
    "line": 7,
    "message": "DBBadge with corner placement must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "nodeType": "VElement",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 36,
    "endLine": 15,
    "line": 15,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "nodeType": "VElement",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 36,
    "endLine": 15,
    "line": 15,
    "message": "DBNotification must have either a text property or children content",
    "messageId": "missingContent",
    "nodeType": "VElement",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 24,
    "endLine": 16,
    "line": 16,
    "message": "DBDrawer must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "nodeType": "VElement",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 51,
    "endLine": 17,
    "line": 17,
    "message": "DBCustomSelect must have mobileCloseButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "nodeType": "VElement",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 59,
    "endLine": 20,
    "line": 20,
    "message": "DBButton must have either a text property or children content",
    "messageId": "missingContent",
    "nodeType": "VElement",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 26,
    "endLine": 27,
    "line": 27,
    "message": "DBInput must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "nodeType": "VElement",
    "ruleId": "db-ux/form-label-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 49,
    "endLine": 30,
    "line": 30,
    "message": "DBInput with required will use default browser validation message. Consider adding invalidMessage attribute for better UX",
    "messageId": "missingInvalidMessage",
    "nodeType": "VElement",
    "ruleId": "db-ux/form-validation-message-required",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 24,
    "endLine": 33,
    "line": 33,
    "message": "DBHeader must have burgerMenuLabel attribute for accessibility",
    "messageId": "missingBurgerMenuLabel",
    "nodeType": "VElement",
    "ruleId": "db-ux/header-burger-menu-label-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 4,
    "endLine": 41,
    "fix": {
      "range": [
        1431,
        1431,
      ],
      "text": " referrerPolicy="no-referrer"",
    },
    "line": 39,
    "message": "DBLink with content="external" should have referrerPolicy attribute",
    "messageId": "missingReferrerPolicy",
    "nodeType": "VElement",
    "ruleId": "db-ux/link-external-security",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 22,
    "endLine": 46,
    "line": 44,
    "message": "DBNavigationItem must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "nodeType": "VElement",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 15,
    "endLine": 51,
    "line": 49,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "nodeType": "VElement",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 22,
    "endLine": 57,
    "line": 55,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "nodeType": "VElement",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 32,
    "endLine": 56,
    "line": 56,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "nodeType": "VElement",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 14,
    "endLine": 63,
    "line": 61,
    "message": "DBButton must have either a text property or children content",
    "messageId": "missingContent",
    "nodeType": "VElement",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 39,
    "endLine": 66,
    "line": 66,
    "message": "DBSelect must have either an options property or <option> children",
    "messageId": "missingOptions",
    "nodeType": "VElement",
    "ruleId": "db-ux/select-requires-options",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 39,
    "endLine": 69,
    "line": 69,
    "message": "DBTag with behavior="removable" must have removeButton attribute for accessibility",
    "messageId": "missingRemoveButton",
    "nodeType": "VElement",
    "ruleId": "db-ux/tag-removable-remove-button-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 61,
    "endLine": 73,
    "line": 73,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "nodeType": "VElement",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint Vue test file > vue-fixed 1`] = `
"<template>
	<div>
		<!-- db-ux/accordion-item-headline-required -->
		<DBAccordionItem></DBAccordionItem>

		<!-- db-ux/badge-corner-placement-rules -->
		<DBBadge placement="corner-top-right">9999</DBBadge>

		<!-- db-ux/badge-no-inline-in-interactive -->
		<DBButton type="submit">
			<DBBadge>Inline in button</DBBadge>
		</DBButton>

		<!-- db-ux/close-button-text-required -->
		<DBNotification></DBNotification>
		<DBDrawer></DBDrawer>
		<DBCustomSelect label="Select"></DBCustomSelect>

		<!-- db-ux/button-no-text-requires-tooltip -->
		<DBButton noText icon="search" type="submit"></DBButton>

		<!-- db-ux/button-type-required -->
		<DBButton type="submit">Missing type</DBButton>
		<DBButton type="button">Valid button</DBButton>

		<!-- db-ux/form-label-required -->
		<DBInput type="text" />

		<!-- db-ux/form-validation-message-required -->
		<DBInput label="Email" required type="text" />

		<!-- db-ux/header-burger-menu-label-required -->
		<DBHeader></DBHeader>

		<!-- db-ux/input-type-required -->
		<DBInput label="Test" type="text" />

		<!-- db-ux/link-external-security -->
		<DBLink href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer"
			>External link</DBLink
		>

		<!-- db-ux/navigation-item-back-button-text-required -->
		<DBNavigationItem>
			<template #subNavigation>Sub nav</template>
		</DBNavigationItem>

		<!-- db-ux/no-interactive-tooltip-content -->
		<DBTooltip>
			<DBButton type="submit">Click</DBButton>
		</DBTooltip>

		<!-- db-ux/no-nested-accordion -->
		<DBAccordion>
			<DBAccordionItem>
				<DBAccordion></DBAccordion>
			</DBAccordionItem>
		</DBAccordion>

		<!-- db-ux/prefer-icon-attribute -->
		<DBButton type="submit" icon="search">
			
		</DBButton>

		<!-- db-ux/select-requires-options -->
		<DBSelect label="Select"></DBSelect>

		<!-- db-ux/tag-removable-remove-button-required -->
		<DBTag behavior="removable"></DBTag>

		<!-- db-ux/tooltip-requires-interactive-parent -->
		<div>
			<DBTooltip>Tooltip without interactive parent</DBTooltip>
		</div>
	</div>
</template>

<script setup lang="ts">
import {
	DBAccordion,
	DBAccordionItem,
	DBBadge,
	DBButton,
	DBCustomSelect,
	DBDrawer,
	DBHeader,
	DBIcon,
	DBInput,
	DBLink,
	DBNavigationItem,
	DBNotification,
	DBSelect,
	DBTag,
	DBTooltip
} from "@db-ux/v-core-components";
</script>
"
`;
